Cleared some warnings!!